--- a/deps/rabbit/BUILD.bazel
+++ b/deps/rabbit/BUILD.bazel
@@ -487,8 +487,11 @@ suites = [
     rabbitmq_suite(
         name = "metadata_store_phase1_SUITE",
         size = "small",
-        runtime_deps = [
+	deps = [
             "@khepri//:bazel_erlang_lib",
+            "//deps/rabbit_common:bazel_erlang_lib",
+	]
+        runtime_deps = [
             "@meck//:bazel_erlang_lib",
             "@ra//:bazel_erlang_lib",
         ],
