--- a/deps/rabbit/BUILD.bazel
+++ b/deps/rabbit/BUILD.bazel
@@ -484,7 +484,7 @@ suites = [
             ":rabbit_ha_test_producer",
         ],
     ),
-    rabbitmq_suite(
+    rabbitmq_integration_suite(
         name = "metadata_store_phase1_SUITE",
         size = "small",
 	deps = [
@@ -494,7 +494,6 @@ suites = [
         runtime_deps = [
             "@meck//:bazel_erlang_lib",
             "@ra//:bazel_erlang_lib",
-            "@rabbitmq_ct_helpers//:bazel_erlang_lib",
         ],
     ),
     rabbitmq_integration_suite(
